# ITOL

./: .gitignore  .gitmodules  LICENSE
ITOL/: ORACLE_AUTO_INSTALLER.md  ORACLE_IMPLEMENTATION.md  ORACLE_SETUP.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  test-api-node.html  tsconfig.json  vite.config.ts  vitest.config.ts
ITOL/docs/: API_NODE_README.md
ITOL/e2e/: api-node.spec.ts
ITOL/playwright-report/: index.html
ITOL/src/: App.css  App.tsx
ITOL/src-tauri/: Cargo.toml  tauri.conf.json
ITOL/src-tauri/capabilities/: default.json
ITOL/src-tauri/src/: command.rs  lib.rs  main.rs
ITOL/src-tauri/src/command/: database.rs  execution.rs  folder.rs  oracle_installer.rs  project_manager.rs
ITOL/src-tauri/src/command/database/: book.rs  edge.rs  node.rs  page.rs
ITOL/src-tauri/src/command/execution/: api_system.rs  db_system.rs  node_system.rs  request.rs
ITOL/src-tauri/src/command/folder/: config.rs  file.rs  file_tests.rs
ITOL/src/pages/: api-node-examples.tsx  api-node-test-entry.tsx  api-node-test.tsx
ITOL/src/shared/components/: api-node-editor.tsx  connection-management.tsx  context-menu.tsx  db-node-editor.tsx  execution-log-panel.test.tsx  execution-log-panel.tsx  file-explorer.tsx  parameter.tsx  (+15 more)
ITOL/src/test/: setup.ts
ITOL/test-results/: .last-run.json
ITOL/test-results/drag-and-drop-File-Explorer-Drag-and-Drop-should-drag-folder-chromium/: error-context.md
ITOL/tests/: drag-and-drop.spec.ts
example-node/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
example-node/typescript/src/: sum copy.ts  sum.ts
(+44 files in other folders)
