[package]
name = "itol"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "itol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "postgres"] }
oracle = "0.6.1"
once_cell = "1.21.0"
tokio = "1.44.0"
reqwest = "0.12.15"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

# Force compatible versions to avoid edition2024 issues
[dependencies.base64ct]
version = "=1.6.0"
[http]
check-revoke = false
